--- a/src/components/signin/css/textInput.css
+++ b/src/components/signin/css/textInput.css
@@ -5,7 +5,7 @@
     border-left: 1px;
     border-right: 1px;
     outline: none;
-    font-size: 0.9em;
+    font-size: 9pt;
 }
 
 .inputBottom{
@@ -15,5 +15,5 @@
     border-left: 1px;
     border-right: 1px;
     outline: none;
-    font-size: 0.9em;
+    font-size: 9pt;
 }
