--- a/src/components/menu/css/subMenu.css
+++ b/src/components/menu/css/subMenu.css
@@ -100,7 +100,7 @@
 }
 .subMenu-subMenuItemsContainer.subMenu-close {
   width: 6rem;
-  height: 5.8125rem;
+  padding: 0.5rem;
   margin: 0;
   border-radius: 0rem 1.8125rem 1.8125rem 0rem;
   background: rgba(255, 255, 255, 0.92);
