feat: Make mail write modal & Add toggle switch

--- a/src/components/common/css/mailWriteModal.css
+++ b/src/components/common/css/mailWriteModal.css
@@ -1,46 +1,143 @@
-
 .mailTitle{
     width: 289px;
     height: 29px;
     position: absolute;
-    top: 8%;
+    top: 10%;
     left: 5%;
     border:none;
     outline: none;
     font-size: 180%;
     font-weight: bold;
 }
+.mailTitle::placeholder{
+    color: #3E3D3D;
+}
+
 .recieverTitleContainer{
     display: flex;
     position: absolute;
-    top: 20%;
+    top: 19%;
     left: 5%;
     align-items: center;
     padding-left: 2%;
-    width: 880px;
-    height: 40px;
-    background-color: #CDD9F5;
-    opacity: 50%;
+    width: 88%;
+    height:6.5%;
+    background-color: rgba(205, 217, 245, 0.5);
+    font-weight: bold;
+    text-align: left;
+    border-radius: 50px;
+    z-index: 1;
+}
+.recieverLabel{
+    font-weight: lighter;
+    color: #3E3D3D;
+}
+.recieverTitle{
+    position: relative;
+    margin-left: 2%;
+    width: 76%;
+    height: 80%;
+    font-weight: bold;
+    color: #3E3D3D;
+    border:none;
+    outline: none;
+    background-color: rgba(205, 217, 245, 0.1);
+}
+
+.toMeText {
+    position: absolute;
+    display: flex;
+    right: 3%;
+    padding-left: 2%;
+    color: #748EEE;
+}
+.isToMe {
+    position: absolute;
+    display: flex;
+    right: 10.5%;
+    border-color: #748EEE;
+    outline: none;
+    
+}
+
+.refTitleContainer {
+    display: flex;
+    position: absolute;
+    top: 26.5%;
+    left: 5%;
+    align-items: center;
+    padding-left: 2%;
+    width: 88%;
+    height:6.5%;
+    background-color: rgba(205, 217, 245, 0.5);
     font-weight: bold;
     text-align: left;
     border-radius: 50px;
     z-index: 1;
 }
 
-.recieverTitle{
-    position: relative;
-    margin-left: 2%;
-    width: 600px;
-    height: 29px;
-    border:none;
-    outline: none;
-    background-color: #CDD9F5;
-    font-weight: bold;
+.refLabel {
+    font-weight: lighter;
+    color: #3E3D3D;
 }
 
-.isToMe {
+.refTitle {
     position: relative;
-    left: 9%;
+    margin-left: 2%;
+    width: 76%;
+    height: 80%;
+    font-weight: bold;
+    color: #3E3D3D;
     border:none;
     outline: none;
+    background-color: rgba(205, 217, 245, 0.1);
+}
+
+.attachedContainer{
+    display: flex;
+    position: absolute;
+    top: 34%;
+    left: 5%;
+    align-items: center;
+    padding-left: 2%;
+    width: 88%;
+    height: 15%;
+    background-color: rgba(205, 217, 245, 0.5);
+    font-weight: bold;
+    text-align: left;
+    border-radius: 15px;
+    z-index: 1;
+}
+
+.attatchedIcon{
+    position: absolute;
+    display: flex;
+    top: 10%;
+    left: 2%;
+    width: 2.5%;
+}
+
+.attachedLabel{
+    position: absolute;
+    display: flex;
+    top: 10%;
+    left: 5.5%;
+    color: #3E3D3D;
+    font-size: 1.2rem;
+    font-weight: lighter;
+    opacity: 0.3;
+}
+
+.aiText {
+    position: absolute;
+    display: flex;
+    top: 52%;
+    left: 8%;
+}
+
+.aiToggleSwitch {
+    position: absolute;
+    display: flex;
+    top: 52%;
+    left: 8%;
 }
