--- a/src/components/common/css/mailWriteModal.css
+++ b/src/components/common/css/mailWriteModal.css
@@ -28,10 +28,12 @@
     border-radius: 50px;
     z-index: 1;
 }
+
 .recieverLabel{
     font-weight: lighter;
     color: #3E3D3D;
 }
+
 .recieverTitle{
     position: relative;
     margin-left: 2%;
@@ -47,14 +49,16 @@
 .toMeText {
     position: absolute;
     display: flex;
-    right: 3%;
-    padding-left: 2%;
+    align-items: center;
+    right: 2.5%;
     color: #748EEE;
 }
+
 .isToMe {
     position: absolute;
     display: flex;
-    right: 10.5%;
+    align-items: center;
+    right: 10.2%;
     border-color: #748EEE;
     outline: none;
     
@@ -164,5 +168,48 @@
 .writeContainer {
     position: absolute;
     display: flex;
-    top: 5%;
+    bottom: 1.5%;
+}
+
+.buttonContainer {
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    width: 25vw;
+    bottom: -54%;
+}
+
+.reservationButton {
+    position: absolute;
+    justify-content: center;
+    align-items:center;
+    display: flex;
+    border-radius: 18.5px;
+    width: 124px;
+    height: 37px;
+    right: 53%;
+    cursor: pointer;
+    border: none;
+    background-color: #FFFFFF;
+    font-weight: bold;
+    font-size: 0.9rem;
+    box-shadow: 0px 2px 6.6px 0px rgba(0, 0, 0, 0.25);
+}
+
+.sendButton {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    border-radius: 18.5px;
+    width: 124px;
+    height: 37px;
+    left: 53%;
+    cursor: pointer;
+    border: none;
+    background-color: #748EEE;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 0.9rem;
+    box-shadow: 0px 2px 6.6px 0px rgba(0, 0, 0, 0.25);
 }
