--- a/src/components/common/css/mailWritingContainer.css
+++ b/src/components/common/css/mailWritingContainer.css
@@ -1,25 +1,26 @@
 .write-container-wrapper {
     position: fixed;
-    top: 75%;
+    top: 78%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 980px;
-    height: 240px;
-    max-width: 100vw;
-    max-height: 100vh;
-    min-width: 200px;
-    min-height: 200px;
+    width: 89%;
+    height: 36.5%;
+    max-width: 90vw;
+    max-height: 70vh;
+    min-width: 150px;
+    min-height: 80px;
     margin: 0;
     z-index: 0;
 }
 
-.write-container-shadow{
+.write-container-shadow {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute; 
-    width: 955px;
-    height: 225px;
+    position: relative;
+    width: 97.5%;
+    height: 90%;
+
     flex-shrink: 0;
     border-radius: 19px;
     background: #FFF;
@@ -37,7 +38,7 @@
     align-items: center;
     position: absolute;
     width: 100%;
-    height: 105%;
+    height: 100%;
     border-radius: 19px;
     background: #FFFFFF;
     box-shadow: 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
@@ -56,40 +57,40 @@
     outline: none;
     border: none;
 }
-.writeField::placeholder{
+.writeField::placeholder {
     font-weight: bold;
 }
 
 @media (max-width: 768px) {
-    .write-container-wrapper {
-      width: 80vw;
-      height: calc(80vw * 0.2449);
-    }
-    
-    .write-container-shadow {
-      width: calc(80vw * 0.9745);
-      height: calc((80vw * 0.2449) * 0.9375);
-    }
-    
-    .write-container {
-      width: 100%;
-      height: 105%;
-    }
+  .write-container-wrapper {
+    width: 80vw;
+    height: calc(80vw * 0.2449);
   }
-  
-  @media (max-width: 576px) {
-    .write-container-wrapper {
-      width: 80vw;
-      height: calc(80vw * 0.2449);
-    }
-    
-    .write-container-shadow {
-      width: calc(80vw * 0.9745);
-      height: calc((80vw * 0.2449) * 0.9375);
-    }
-    
-    .write-container {
-      width: 100%;
-      height: 105%;
-    }
+
+  .write-container-shadow {
+    width: calc(80vw * 0.9745);
+    height: calc((80vw * 0.2449) * 0.9375);
   }
+
+  .write-container {
+    width: 80%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 576px) {
+  .write-container-wrapper {
+    width: 80vw;
+    height: calc(80vw * 0.2449);
+  }
+
+  .write-container-shadow {
+    width: calc(80vw * 0.9745);
+    height: calc((80vw * 0.2449) * 0.9375);
+  }
+
+  .write-container {
+    width: 80%;
+    height: 105%;
+  }
+}
