--- a/src/components/common/css/mailWritingContainer.css
+++ b/src/components/common/css/mailWritingContainer.css
@@ -13,6 +13,21 @@
     z-index: 0;
 }
 
+.write-container-wrapper.on {
+  position: fixed;
+  top: 78%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 89%;
+  height: 36.5%;
+  max-width: 90vw;
+  max-height: 70vh;
+  min-width: 150px;
+  min-height: 80px;
+  margin: 0;
+  z-index: 0;
+}
+
 .write-container-shadow {
     display: flex;
     justify-content: center;
@@ -32,17 +47,65 @@
     z-index: 1;
 }
 
+.write-container-shadow.on {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 97.5%;
+  height: 90%;
+
+  flex-shrink: 0;
+  border-radius: 19px;
+  background: #FFF;
+  border: 13px solid transparent;
+  border-image: linear-gradient(120deg, #7FACEE 0%, #9590D5 100%);
+  filter: blur(9.5px);
+  border-image-slice: 1;
+  opacity: 0.6;
+  z-index: 1;
+}
+
 .write-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 19px;
-    background: #FFFFFF;
-    box-shadow: 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
-    z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 19px;
+  border: none;
+  background-image: linear-gradient(#FFFFFF, #FFFFFF);
+  box-shadow: 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
+  z-index: 2;
+}
+
+.write-container.on {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 4px solid transparent;
+  border-radius: 19px;
+  background-image: linear-gradient(#FFFFFF, #FFFFFF), linear-gradient(90deg, #936DF5 0%, #936DF5 20%, #6664F8 44%, #6070FC 72%, #6070FC 99%);
+  -webkit-animation: hue 10s infinite linear;
+  animation: gradientShift 10s infinite linear;
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  box-shadow: 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
+  margin: -20px -20px -4.2px -4px;
+  z-index: 2;
+}
+
+@keyframes gradientShift {
+from {
+  background-position: 0 0, 0 0;
+}
+to {
+  background-position: 100% 0, 0 0;
+}
 }
 
 .writeField {
@@ -57,6 +120,20 @@
     outline: none;
     border: none;
 }
+
+.writeField.on {
+  display: flex;
+  position: absolute;
+  width: 95%;
+  height: 65%;
+  top: 25%;
+  overflow-y: auto;
+  resize: none;
+  font-size: 1.2em;
+  outline: none;
+  border: none;
+}
+
 .writeField::placeholder {
     font-weight: bold;
 }
