--- a/src/components/common/css/mailWriteModal.css
+++ b/src/components/common/css/mailWriteModal.css
@@ -246,3 +246,31 @@
     font-size: 0.9rem;
     box-shadow: 0px 2px 6.6px 0px rgba(0, 0, 0, 0.25);
 }
+
+.compImg {
+    position: absolute;
+    width: 200%;
+    height: 200%;
+    z-index: 2;
+}
+
+.sendCompContainer {
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+}
+
+.sendCheck{
+    position: absolute;
+    display: flex;
+    top: 40%;
+    left: 48%;
+}
+
+.sendCompText {
+    position: absolute;
+    display: flex;
+    font-weight: bold;
+    top: 50%;
+    left: 48%;
+}
