--- a/src/components/mailBox/css/mailBoxContainer.css
+++ b/src/components/mailBox/css/mailBoxContainer.css
@@ -1,7 +1,10 @@
-.mailBoxContainer-wrapper{
+.mailBoxContainer-container {
   display: flex;
+  width: calc(100% - 6rem);
+  height: 44rem;
+  transition: margin-left 0.3s ease-in-out, width 0.3s ease-in-out;
+  margin-left: 6rem; 
   flex-direction: column;
-  justify-content: center;
   border-radius: 1.1875rem;
   gap: 1rem;
   align-self: stretch;
@@ -9,8 +12,12 @@
   box-shadow: 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
 }
 
-.mailBoxContainer-container {
+.mailBoxContainer-container.menuBar-open {
+  width: calc(100% - 16rem);
+  margin-left: 16rem;
+}
+
+.mailBoxContainer-detail {
   display: flex;
-  gap: 2rem;
   padding: 0 1rem;
 }
