--- a/src/components/mailBox/css/mailListHeader.css
+++ b/src/components/mailBox/css/mailListHeader.css
@@ -23,6 +23,10 @@
   padding-right: 2rem;
   border-right: 1px solid rgba(0, 0, 0, 0.39);
 }
+.mailListHeader-mailActions label {
+  display: flex;
+  gap: 0.5rem;
+}
 .mailListHeader-mailActions-items {
   display: flex;
   gap: 0.5rem;
