--- a/src/components/mailBox/css/timeSortedList.css
+++ b/src/components/mailBox/css/timeSortedList.css
@@ -1,12 +1,13 @@
 .timeSortedList-wrapper {
   display: flex;
   width: 24.125rem;
+  height: 36rem;
   padding: 0.75rem 1rem;
   flex-direction: column;
   align-items: center;
   border-radius: 1.4375rem;
-background: rgba(255, 255, 255, 0.42);
-box-shadow: 2px 2px 6.8px 0px rgba(0, 0, 0, 0.25);
+  background: rgba(255, 255, 255, 0.42);
+  box-shadow: 2px 2px 6.8px 0px rgba(0, 0, 0, 0.25);
 }
 
 .timeSortedList-header {
