--- a/src/components/mailBox/css/mailBoxLayout.css
+++ b/src/components/mailBox/css/mailBoxLayout.css
@@ -1,4 +1,4 @@
-.mailBoxContainer-container {
+.mailBoxLayout-container {
   display: flex;
   width: calc(100% - 6rem);
   height: 44rem;
@@ -12,12 +12,12 @@
   box-shadow: 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
 }
 
-.mailBoxContainer-container.menuBar-open {
+.mailBoxLayout-container.menuBar-open {
   width: calc(100% - 16rem);
   margin-left: 16rem;
 }
 
-.mailBoxContainer-detail {
+.mailBoxLayout-detail {
   display: flex;
   padding: 0 1rem;
 }
