--- a/src/components/mailBox/css/mailPreviewContainer.css
+++ b/src/components/mailBox/css/mailPreviewContainer.css
@@ -1,4 +1,7 @@
 .mailPreviewContainer-wrapper {
-  width: 34.125rem;
+  display: flex;
+  flex-direction: column;
   gap: 1.5rem;
+  max-height: 90vh;
+  overflow: scroll;
 }
