--- a/src/components/mailBox/css/mailPreviewItem.css
+++ b/src/components/mailBox/css/mailPreviewItem.css
@@ -1,19 +1,19 @@
 .mailPreviewItem-wrapper {
-  width: 17.9375rem;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: flex-start;
+  display: flex;
+  justify-content: flex-end;
   gap: 0.25rem;
 }
 .mailPreviewItem-wrapper.received {
-  align-items: flex-end;
+  justify-content: flex-start;
 }
 
 .mailPreviewItem-container {
   display: flex;
-  padding: 1rem;
+  padding: 1.75rem;
+  width: 60%;
   flex-direction: column;
   align-self: stretch;
+  position: relative;
   gap: 0.5rem;
   border-radius: 0.625rem 0.625rem 3.5625rem 0.625rem;
   background: rgba(255, 255, 255, 0.82);
@@ -72,16 +72,17 @@
 }
 
 .mailPreviewItem-content {
-  width: 12rem;
   color: rgba(62, 61, 61, 0.71);
   font-family: "Pretendard Variable";
   font-size: 0.625rem;
   font-style: normal;
   font-weight: 500;
-  line-height: normal;
+  line-height: 1.0625rem;
 }
 
 .mailPreviewItem-footer {
+  position: absolute;
+  bottom: -1rem;
   color: rgba(114, 114, 114, 0.60);
   font-family: "Pretendard Variable";
   font-size: 0.5rem;
