--- a/src/screens/css/signin.css
+++ b/src/screens/css/signin.css
@@ -13,13 +13,72 @@
     font-size: 0.9rem;
 }
 
-.inputLine {
+.inputLine1 {
     position: absolute;
-    top: 40%;
-    width: 68%;
+    top: 39%;
+    width: 69%;
+    z-index: 1;
+}
+.jobText{
+    position: absolute;
+    top: 42%;
+    left: 16%;
+    font-size: 0.9rem;
     z-index: 1;
 }
 
+.affiliationInput {
+    position: absolute;
+    top: 42%;
+    left: 36%;
+    border: none;
+    outline: none;
+
+}
+
+.affiliationInput::placeholder{
+    color: #000000;
+    font-size: 0.9rem;
+    
+}
+
+.departmentPlaceHolder {
+    position: absolute;
+    top: 54%;
+    left: 16%;
+    font-size: 0.9rem;
+}
+
+.inputLine2 {
+    position: absolute;
+    top: 58.5%;
+    width: 69%;
+    z-index: 1;
+}
+
+.departmentInput {
+    position: absolute;
+    top: 53.5%;
+    border: none;
+    outline: none;
+    font-size: 0.9rem;
+
+}
+
+.positionPlaceHolder {
+    position: absolute;
+    top: 61.5%;
+    left: 16%;
+    font-size: 0.9rem;
+}
+
+.positionInput {
+    position: absolute;
+    top: 61.4%;
+    border: none;
+    outline: none;
+    font-size: 0.9rem;
+}
 .addInfoCompleteButton {
     position: absolute;
     justify-content: center;
