--- a/src/components/menu/css/subMenu.css
+++ b/src/components/menu/css/subMenu.css
@@ -1,4 +1,3 @@
-
 .subMenu-wrapper.subMenu-close {
   justify-content: center;
   gap: 0;
@@ -37,6 +36,7 @@
 
 .subMenu-container {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
   border-radius: 8px;
@@ -53,19 +53,38 @@
   border-radius: 0px;
   pointer-events: none; 
 }
+.subMenu-container.active {
+  background-color: #EFEFFF;
+}
+.subMenu-container.subMenu-subMenuOpen.active {
+  background-color: transparent;
+}
+.subMenu-container.subMenu-subMenuOpen.active .subMenu-icon{
+  color: #2F3438;
+}
+.subMenu-container.active .subMenu-icon{
+  color: #9590D5;
+}
+.subMenu-container.subMenu-close.active{
+  background-color: transparent;
+}
+.subMenu-container.subMenu-close.active .subMenu-icon{
+  color: #9590D5;
+}
 
 .subMenu-textContainer {
   display: flex;
+  align-items: center;
   gap: 0.5rem;
 }
 
 .subMenu-icon {
-  fill: #2f3438;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  color: #2F3438;
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
 }
 .subMenu-icon.subMenu-close {
-  width: 2rem;
+  width: 1.7rem;
+  height: 1.7rem;
 }
 
 .subMenu-text {
