--- a/src/components/mailBox/css/mailBoxLayout.css
+++ b/src/components/mailBox/css/mailBoxLayout.css
@@ -6,8 +6,17 @@
   border-radius: 1.1875rem;
   align-self: stretch;
   transition: margin-left 0.3s ease-in-out, width 0.3s ease-in-out;
-  background: conic-gradient(from 133deg at 53.57% 50%, #D7E1F5 147.15027809143066deg, #CAD9F0 231.97685480117798deg, #D8DCF1 306.66590452194214deg, #EFEFFF 336.8507981300354deg, #E2DEF1 360deg);
-  box-shadow: 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
+  background: 
+  linear-gradient(270deg, rgba(255, 255, 255, 0) 40%, #FFF 70%),
+  conic-gradient(from 133deg at 53.57% 50%,
+    #E0DFF2 0deg,
+    #D7E1F5 147.15deg, 
+    #CAD9F0 231.97deg, 
+    #D8DCF1 306.66deg, 
+    #EFEFFF 336.85deg, 
+    #E2DEF1 360deg
+  );
+  box-shadow: 4px 4px 20px 0px rgba(149, 144, 213, 0.15), -4px -4px 20px 0px rgba(127, 172, 238, 0.15), 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
 }
 
 .mailBoxLayout-container.menuBar-open {
