--- a/src/components/mailBox/css/mailListItem.css
+++ b/src/components/mailBox/css/mailListItem.css
@@ -4,19 +4,58 @@
   align-items: center;
   border-bottom: 1px solid #e0e0e0;
   cursor: pointer;
+  z-index: 1;
 }
 .mailListItem-wrapper:hover {
   background-color: rgba(229, 231, 233, 0.4);
 }
 
-.maimailListItemlItem-checkBox {
+/* 체크박스 컨테이너 */
+.mailListItem-custom-checkBox {
   display: flex;
   align-items: center;
-  width: 0.8125rem;
-  height: 0.8125rem;
-  border-radius: 0.125rem;
-  border: 1px solid #2F3438;
   margin-right: 0.75rem;
+  cursor: pointer;
+  position: relative;
+}
+
+/* 체크박스 숨기기 */
+.mailListItem-custom-checkBox input {
+  display: none;
+}
+
+/* 체크박스 스타일 */
+.checkmark {
+  width: 0.8rem;
+  height: 0.8rem;
+  border-radius: 0.2rem;
+  border: 1px solid #b3b3b3;
+  display: inline-block;
+  position: relative;
+}
+
+/* 체크박스 hover 시 테두리 변경 */
+.mailListItem-custom-checkBox:hover .checkmark {
+  border-color: #9590D5;
+}
+
+/* 체크박스 선택 시 스타일 */
+.mailListItem-custom-checkBox input:checked + .checkmark {
+  background-color: #9590D5;
+  border-color: #9590D5;
+}
+
+/* 체크된 상태에서 체크 표시 */
+.mailListItem-custom-checkBox input:checked + .checkmark::after {
+  content: "";
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  width: 4px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: translate(-50%, -50%) rotate(45deg);
 }
 
 .mailListItem-mailInfo {
