--- a/src/components/menu/css/menuBar.css
+++ b/src/components/menu/css/menuBar.css
@@ -2,13 +2,14 @@
   position: fixed;
   display: flex;
   flex-direction: column;
-  width: 13.1875rem;
+  width: 12rem;
   height: 40rem;
   padding: 2rem 0.75rem;
   border-radius: 30px;
   background: rgba(255, 255, 255, 0.42);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   transition: width 0.3s ease-in-out, padding 0.3s ease-in-out;
+  z-index: 100;
 }
 .menuBar-wrapper.menuBar-close {
   display: block;
