--- a/src/components/menu/css/subMenu.css
+++ b/src/components/menu/css/subMenu.css
@@ -80,11 +80,11 @@
 
 .subMenu-icon {
   color: #2F3438;
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
 }
 .subMenu-icon.subMenu-close {
   width: 1.7rem;
   height: 1.7rem;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
 }
 
 .subMenu-text {
@@ -124,7 +124,7 @@
   padding: 0.5rem;
   margin: 0;
   border-radius: 0rem 1.8125rem 1.8125rem 0rem;
-  background: rgba(255, 255, 255, 0.92);
+  background: rgba(255, 255, 255, 1);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .subMenu-subMenuItemsContainer.subMenu-close.subMenu-subMenuOpen {
