--- a/src/components/mailBox/css/mailBoxLayout.css
+++ b/src/components/mailBox/css/mailBoxLayout.css
@@ -1,7 +1,14 @@
+.mailBoxLayout-wrapper {
+  display: flex;
+  margin: 0.4rem;
+  height: 95vh;
+  gap: 1rem;
+}
+
 .mailBoxLayout-container {
   display: flex;
-  height: 90vh;
-  margin-left: 6rem; 
+  width: 100%;
+  flex: 1;
   flex-direction: column;
   border-radius: 1.1875rem;
   align-self: stretch;
@@ -19,11 +26,7 @@
   box-shadow: 4px 4px 20px 0px rgba(149, 144, 213, 0.15), -4px -4px 20px 0px rgba(127, 172, 238, 0.15), 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
 }
 
-.mailBoxLayout-container.menuBar-open {
-  margin-left: 16rem;
-}
-
 .mailBoxLayout-common {
   padding: 1rem;
-  max-height: 100%;
+  height: 85vh;
 }
