--- a/src/components/mailBox/css/mailPreviewContainer.css
+++ b/src/components/mailBox/css/mailPreviewContainer.css
@@ -1,7 +1,8 @@
 .mailPreviewContainer-wrapper {
   display: flex;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
   gap: 1.5rem;
-  max-height: 90vh;
   overflow: scroll;
 }
