--- a/src/components/mailBox/css/senderGroupedList.css
+++ b/src/components/mailBox/css/senderGroupedList.css
@@ -1,6 +1,6 @@
 .senderGroupedList-wrapper {
   display: flex;
-  width: 24.125rem;
+  height: 100%;
   flex-direction: column;
   align-items: flex-start;
   gap: 1.5rem;
