--- a/src/components/mailBox/css/timeSortedList.css
+++ b/src/components/mailBox/css/timeSortedList.css
@@ -1,7 +1,7 @@
 .timeSortedList-wrapper {
   display: flex;
   width: 24.125rem;
-  height: 36rem;
+  height: 100%;
   padding: 0.75rem 1rem;
   flex-direction: column;
   align-items: center;
@@ -12,8 +12,8 @@
 
 .timeSortedList-header {
   display: flex;
-  padding: 0rem 1rem;
   align-items: center;
+  padding: 0 1rem;
   gap: 0.5rem;
   align-self: stretch;
   margin-bottom: 0.5rem;
@@ -30,5 +30,6 @@
 
 .timeSortedList-container {
   display: flex;
+  width: 100%;
   flex-direction: column;
 }
