--- a/src/screens/mailBox/css/receiveMailScreen.css
+++ b/src/screens/mailBox/css/receiveMailScreen.css
@@ -1,13 +1,18 @@
 .receiveMailScreen-container {
   display: flex;
   width: 100%;
-  height: 90vh;
+  height: 100%;
+  gap: 1rem;
 }
 
 .receiveMailScreen-list {
   flex: 1; 
+  width: 100%;
+  height: 100%;
 }
 
 .receiveMailScreen-preview {
   flex: 2;
+  width: 100%;
+  height: 100%;
 }
