--- a/src/components/mailBox/css/mailBoxLayout.css
+++ b/src/components/mailBox/css/mailBoxLayout.css
@@ -8,6 +8,7 @@
 .mailBoxLayout-container {
   display: flex;
   width: 100%;
+  height: 100%;
   flex: 1;
   flex-direction: column;
   border-radius: 1.1875rem;
@@ -27,6 +28,6 @@
 }
 
 .mailBoxLayout-common {
-  padding: 1rem;
-  height: 85vh;
+  padding: 1rem 1rem 0;
+  height: 80vh;
 }
