--- a/src/components/mailBox/css/mailDetail.css
+++ b/src/components/mailBox/css/mailDetail.css
@@ -1,9 +1,7 @@
 .mailDetail-wrapper {
   display: flex;
-  width: 100%;
   height: 100%;
   flex-direction: column;
-  align-items: flex-end;
   gap: 0.5rem;
 }
 
@@ -87,9 +85,7 @@
 
 .mailDetail-footer {
   display: flex;
-  justify-content: space-between;
-  font-size: 14px;
-  color: #999;
+  justify-content: flex-end;
 }
 
 .mailDetail-sendAt,
