--- a/src/screens/mailBox/css/receiveMailScreen.css
+++ b/src/screens/mailBox/css/receiveMailScreen.css
@@ -7,12 +7,12 @@
 
 .receiveMailScreen-list {
   flex: 1; 
-  width: 100%;
+  flex-basis: 30%;
   height: 100%;
 }
 
 .receiveMailScreen-preview {
   flex: 2;
-  width: 100%;
+  flex-basis: 70%;
   height: 100%;
 }
