--- a/src/components/mailBox/css/mailDetailMax.css
+++ b/src/components/mailBox/css/mailDetailMax.css
@@ -1,13 +1,17 @@
-.mailDetail-wrapper {
+.mailDetailMax-wrapper {
   display: flex;
+  width: 100%;
   height: 100%;
+  box-sizing: border-box;
   flex-direction: column;
   gap: 0.5rem;
 }
 
-.mailDetail-container {
+.mailDetailMax-container {
   display: flex;
+  width: 100%;
   height: 100%;
+  box-sizing: border-box;
   padding: 1.5rem;
   flex-direction: column;
   border-radius: 0.625rem 0.625rem 3.5625rem 0.625rem;
@@ -15,28 +19,28 @@
   box-shadow: 0px 0px 10.3px 0px rgba(0, 0, 0, 0.25);
 }
 
-.mailDetail-header {
+.mailDetailMax-header {
   display: flex;
   justify-content: space-between;
   margin-bottom: 0.5rem;
 }
 
-.mailDetail-header-container {
+.mailDetailMax-header-container {
   display: flex;
   align-items: center;
   gap: 0.5rem;
 }
 
-.mailDetail-title {
+.mailDetailMax-title {
   color: rgba(62, 61, 61, 0.90);
   font-family: "Pretendard Variable";
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 700;
-  line-height: normal;;
+  line-height: normal;
 }
 
-.mailDetail-sender {
+.mailDetailMax-sender {
   color: rgba(62, 61, 61, 0.26);
   font-family: "Pretendard Variable";
   font-size: 0.625rem;
@@ -45,12 +49,12 @@
   line-height: normal;
 }
 
-.mailDetail-files {
+.mailDetailMax-files {
   gap: 0.5rem;
   margin-bottom: 1.5rem;
 }
 
-.mailDetail-files-title {
+.mailDetailMax-files-title {
   color: rgba(62, 61, 61, 0.60);
   font-family: "Pretendard Variable";
   font-size: 0.5rem;
@@ -59,13 +63,13 @@
   line-height: normal;
 }
 
-.mailDetail-files-list {
+.mailDetailMax-files-list {
   display: flex;
   gap: 0.5rem;
   flex-wrap: wrap;
 }
 
-.mailDetail-content {
+.mailDetailMax-content {
   height: 20.875rem;
   flex-shrink: 0;
   align-self: stretch;
@@ -78,13 +82,13 @@
   overflow: scroll;
 }
 
-.mailDetail-footer {
+.mailDetailMax-footer {
   display: flex;
   justify-content: flex-end;
 }
 
-.mailDetail-sendAt,
-.mailDetail-receiveAt {
+.mailDetailMax-sendAt,
+.mailDetailMax-receiveAt {
   color: rgba(114, 114, 114, 0.60);
   text-align: right;
   font-family: "Pretendard Variable";
