--- a/src/screens/mailBox/css/receiveMailScreen.css
+++ b/src/screens/mailBox/css/receiveMailScreen.css
@@ -1,6 +1,7 @@
 .receiveMailScreen-container {
   display: flex;
   width: 100%;
+  box-sizing: border-box;
   height: 100%;
   gap: 1rem;
 }
@@ -8,11 +9,15 @@
 .receiveMailScreen-list {
   flex: 1; 
   flex-basis: 30%;
+  width: 100%;
+  box-sizing: border-box;
   height: 100%;
 }
 
 .receiveMailScreen-preview {
   flex: 2;
   flex-basis: 70%;
+  width: 100%;
+  box-sizing: border-box;
   height: 100%;
 }
