--- a/src/components/mailBox/css/mailBoxLayout.css
+++ b/src/components/mailBox/css/mailBoxLayout.css
@@ -5,6 +5,7 @@
   gap: 1rem;
 }
 
+/* 메일함 헤더 + 컨텐츠 스타일 */
 .mailBoxLayout-container {
   display: flex;
   width: 100%;
@@ -15,18 +16,21 @@
   align-self: stretch;
   transition: margin-left 0.3s ease-in-out, width 0.3s ease-in-out;
   background: 
-  linear-gradient(270deg, rgba(255, 255, 255, 0) 40%, #FFF 90%),
-  conic-gradient(from 133deg at 53.57% 50%,
-    #E0DFF2 0deg,
-    #D7E1F5 147.15deg, 
-    #CAD9F0 231.97deg, 
-    #D8DCF1 306.66deg, 
-    #EFEFFF 336.85deg, 
-    #E2DEF1 360deg
-  );
-  box-shadow: 4px 4px 20px 0px rgba(149, 144, 213, 0.15), -4px -4px 20px 0px rgba(127, 172, 238, 0.15), 0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
+    linear-gradient(270deg, rgba(255, 255, 255, 0) 40%, #FFF 90%),
+    conic-gradient(from 133deg at 53.57% 50%,
+      #E0DFF2 0deg,
+      #D7E1F5 147.15deg, 
+      #CAD9F0 231.97deg, 
+      #D8DCF1 306.66deg, 
+      #EFEFFF 336.85deg, 
+      #E2DEF1 360deg
+    );
+  box-shadow: 4px 4px 20px 0px rgba(149, 144, 213, 0.15), 
+              -4px -4px 20px 0px rgba(127, 172, 238, 0.15), 
+              0px 1px 5.2px 0px rgba(0, 0, 0, 0.25);
 }
 
+/* 메일 컨텐츠 공통 스타일 */
 .mailBoxLayout-common {
   padding: 1rem 1rem 0;
   width: 100%;
