feat: Add mailListHeaderM component

--- a/src/components/mailBox/css/mailBoxLayout.css
+++ b/src/components/mailBox/css/mailBoxLayout.css
@@ -37,3 +37,18 @@
   box-sizing: border-box;
   height: 80vh;
 }
+
+/* 모바일 */
+@media (max-width: 425px) {
+  .mailBoxLayout-wrapper {
+    margin: 0;
+  }
+
+  .mailBoxLayout-container {
+    border-radius: 0;
+  }
+
+  .mailBoxLayout-common {
+
+  }
+}
