--- a/src/screens/css/signin.css
+++ b/src/screens/css/signin.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'SUIT-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .formContainer {
     position: relative;
     z-index: 1;
@@ -11,7 +18,7 @@
     height: 100vh;
     object-fit: cover;
     z-index: -1;
-    opacity: 0%;
+    opacity: 92%;
 }
 
 .symbolLogo{
@@ -26,6 +33,7 @@
     position: absolute;
     top: 34.5%;
     left: 16%;
+    font-family: 'SUIT-Regular';
     font-size: 0.9rem;
 }
 
@@ -39,6 +47,7 @@
     position: absolute;
     top: 42%;
     left: 16%;
+    font-family: 'SUIT-Regular';
     font-size: 0.9rem;
     z-index: 1;
 }
@@ -49,19 +58,19 @@
     left: 36%;
     border: none;
     outline: none;
-
 }
 
 .affiliationInput::placeholder{
     color: #000000;
     font-size: 0.9rem;
-    
+    font-family: 'SUIT-Regular';
 }
 
 .departmentPlaceHolder {
     position: absolute;
     top: 54%;
     left: 16%;
+    font-family: 'SUIT-Regular';
     font-size: 0.9rem;
 }
 
@@ -77,6 +86,7 @@
     top: 53.5%;
     border: none;
     outline: none;
+    font-family: 'SUIT-Regular';
     font-size: 0.9rem;
 
 }
@@ -85,6 +95,7 @@
     position: absolute;
     top: 61.5%;
     left: 16%;
+    font-family: 'SUIT-Regular';
     font-size: 0.9rem;
 }
 
@@ -93,6 +104,7 @@
     top: 61.4%;
     border: none;
     outline: none;
+    font-family: 'SUIT-Regular';
     font-size: 0.9rem;
 }
 .addInfoCompleteButton {
