refactor: Update logic to store only selected mail ID

--- a/src/components/mailBox/css/mailListItem.css
+++ b/src/components/mailBox/css/mailListItem.css
@@ -70,6 +70,9 @@
   stroke: #a5a5a5;
   stroke-width: 1.4px;
 }
+.mailListItem-star.impotant{
+  fill: yellow;
+}
 
 .mailListItem-mailInfo {
   display: flex;
