feat: Add Login page

--- a/src/screens/css/landingScreen.css
+++ b/src/screens/css/landingScreen.css
@@ -170,6 +170,22 @@
     line-height: normal;
 }
 
+.subState {
+    position: absolute;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    top: 37.5%;
+    left: 43.3%;
+
+    color: #2F3438;
+    font-family: "SUIT";
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 200;
+    line-height: normal;
+}
+
 .functionContainer {
     position: absolute;
     display: flex;
@@ -178,12 +194,6 @@
     top: 41.8%;
     width: 92.5%;
     height: 16%;
-    padding: auto;
-    margin: auto;
-}
-
-.subState {
-    position: absolute;
 }
 
 .function1Wrapper {
@@ -200,12 +210,25 @@
     position: relative;
     width: 3.75rem;
     height: 3.75rem;
-    margin-bottom: 12%;
+    margin-bottom: -3%;
     aspect-ratio: 1/1;
+}
+
+.functionIntro1 {
+    position: relative;
+    color: #2F3438;
+
+    font-family: "SUIT";
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 200;
+    line-height: normal;
+    margin-bottom: 41.9375%;
 }
 
 .functionState1 {
     position: relative;
+    padding-left: 3%;
 }
 
 .function2Wrapper {
@@ -220,16 +243,29 @@
 
 .funtion2 {
     position: relative;
-    display: flex;
-
     width: 3.875rem;
     height: 3.875rem;
     aspect-ratio: 1/1;
 }
 
+.functionIntro2 {
+    position: relative;
+    margin-top: 2%;
+    margin-bottom: 40.4%;
+
+    font-family: "SUIT";
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 200;
+    line-height: normal;
+    background: linear-gradient(90deg, #8C4CF6 0%, #5947F5 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 .funcState2 {
     position: relative;
-    margin-top: 12.1%;
 }
 
 .function3Wrapper {
@@ -251,7 +287,19 @@
     aspect-ratio: 1/1;
 }
 
+.functionIntro3{
+    position: relative;
+    margin-top: 2%;
+    margin-bottom: 40.4%;
+    color: #2F3438;
+
+    font-family: "SUIT";
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 200;
+    line-height: normal;
+}
+
 .funcState3 {
     position: relative;
-    margin-top: 12.1%;
 }
