--- a/src/screens/css/landingScreen.css
+++ b/src/screens/css/landingScreen.css
@@ -34,14 +34,11 @@
 .serviceText{
     position: absolute;
     top: 5.2%;
-    left: 11.5%;
-    margin-top: 6.87%;
-    margin-left: 17%;
-    margin-right: 15%;
+    left: 27.8%;
     font-family: "SUIT";
     font-size: 8rem;
     font-style: normal;
-    font-weight: 50;
+    font-weight: 200;
     line-height: normal;
     color: #2F3438;
 }
@@ -86,21 +83,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    top: 18.8%;
-    left: 3%;
-    margin-top: 2%;
-    margin-left: 40%;
-    margin-right: 40%;
+
+    top: 22.8%;
+    left: 43%;
     width: 12.5625rem;
     height: 3.75rem;
+    padding: 0.5rem;
 
     border-radius: 1rem;
     border: 4px solid #BFBDE6;
-    background: #FFF;
+    background: #FFFFFF;
     outline: none;
 
-    color: #000;
     cursor: pointer;
+
+    color: #000000;
     font-family: "SUIT";
     font-size: 1.25rem;
     font-style: normal;
@@ -109,12 +106,14 @@
 }
 
 .buttonImg {
+    position: relative;
     width: 1.62rem;
     height: 1.62rem;
     flex-shrink: 0;
     aspect-ratio: 25.92/25.92;
     margin-left: 2.25%;
     margin-right: 3.375%;
+    pointer-events: none;
 }
 
 .catchphraseShadow {
